code/python/RealTimeTimeSeries/v3/docs/InlineResponse2008Data.md
# InlineResponse2008Data

Time series data for the notation.

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id_notation** | **str, none_type** | MDG identifier of the listing. | [optional] 
**source_identifier** | **str, none_type** | Identifier used in the request. | [optional] 
**range** | [**InlineResponse2004DataRange**](InlineResponse2004DataRange.md) |  | [optional] 
**quality** | **str, none_type** | Quality of the price. | [optional] 
**prices** | [**[InlineResponse2008DataPrices]**](InlineResponse2008DataPrices.md) | Time series of prices. | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


